major adjustments to box margins and color schemes on stylesheet

--- a/style.css
+++ b/style.css
@@ -5,21 +5,42 @@
     padding: 5px; */
 }
 
+h1 {
+    
+}
 
 main{
-    display:flex;
-    /*flex-wrap: wrap;
-    justify-content: center;*/
+    display:flex; /*display flex? block?*/
+    flex-wrap: wrap;
+}
+
+h2 {
+    width: 300px;
+    border: 5px solid white;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
 }
 
 section{
-    padding:20px;
+    width: 350px;
+    border: 5px solid white;
+    margin-top: 5%;
+    border-style: dotted;
+    padding: 5px;px;
+    margin: 20 px;
+    color: blueviolet;
+
 }
 
 pre {
     font-size: 12px;
     margin: 50;
+        inline-size: 100px;
+
 }
+
+.
 
 .row {
     display:flex;
@@ -41,8 +62,8 @@ pre {
 .linear-gradient-background {
     background-image: linear-gradient(
         rgba(232, 102, 236, 0.3) 0%;
-        rgba(232, 102, 236, 0.6) 100%
-    );
+        rgba(232, 102, 236, 0.6) 100%;
+    )
 }
 
 .code-card .card-header {
