added more to the stylesheet

--- a/style.css
+++ b/style.css
@@ -16,14 +16,13 @@ p {
 
 .text {
     color:blueviolet;
-    font-size: 8px; /*why isnt this doing anything*/
+    font-size: 16px; /*why isnt this doing anything*/
 }
 
 main{
     display:flex;
     flex-direction: row;
     width: 100%;
-     /*display flex? block?*/
     flex-wrap: wrap;
 }
 
@@ -39,6 +38,7 @@ h3 {
     text-align: center;
     color: blueviolet;
 }
+
 section{
     width: 30%;
     border: 5px solid white;
@@ -96,6 +96,14 @@ pre {
 .card-header {
     position: relative;
     margin-top: -20px;
+}
+
+.space-around {
+    justify-content: space-around;
+}
+
+.center {
+    justify-content: center;
 }
 
 /*
